--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeepSeek Chat Web</title>
     <!-- Добавлена иконка сайта -->
-    <link rel="icon" href="/ico.png" type="image/png">
+    <link rel="icon" href="/ico.jpg" type="image/jpg">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css">
 </head>
