--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeepSeek Chat Web</title>
-    <!-- Добавлена иконка сайта -->
+    <title>DeepSeek Chat + Kling AI</title>
     <link rel="icon" href="/ico.jpg" type="image/jpg">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css">
@@ -12,18 +11,32 @@
 <body>
     <div class="container">
         <header>
-            <h1>🤖 DeepSeek Chat</h1>
+            <h1>🤖 DeepSeek Chat + 🎨 Kling AI</h1>
             <div class="api-key-container">
-                <input type="password" id="api-key" placeholder="Введите ваш API-ключ DeepSeek">
-                <button id="save-key">Сохранить</button>
+                <input type="password" id="api-key" placeholder="DeepSeek API Key">
+                <input type="password" id="kling-access-key" placeholder="Kling Access Key">
+                <input type="password" id="kling-secret-key" placeholder="Kling Secret Key">
+                <button id="save-keys">Сохранить ключи</button>
             </div>
         </header>
+
+        <div class="mode-toggle">
+            <button id="mode-toggle">Режим: Чат</button>
+        </div>
 
         <div id="chat-container">
             <div id="messages"></div>
         </div>
 
         <div class="input-area">
+            <div id="file-upload-container" class="hidden">
+                <label for="file-upload" class="file-upload-label">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip"><path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg>
+                    <input type="file" id="file-upload" multiple>
+                </label>
+                <div id="file-list"></div>
+            </div>
+            
             <textarea 
                 id="user-input" 
                 placeholder="Введите сообщение (Shift+Enter для переноса, Enter для отправки)..." 
@@ -42,6 +55,7 @@
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-encode@1.0.0/dist/jwt-encode.min.js"></script>
     <script src="/script.js"></script>
 </body>
 </html>
