--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="icon" href="/ico.jpg" type="image/jpg">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jwt-encode@1.0.0/dist/jwt-encode.min.js"></script>
+
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🤖 DeepSeek Chat + 🎨 Kling AI</h1>
+            <h1>🤖 DeepSeek Chat + 🎨 Kling AI by Kojihov</h1>
             <div class="api-key-container">
                 <input type="password" id="api-key" placeholder="DeepSeek API Key">
                 <input type="password" id="kling-access-key" placeholder="Kling Access Key">
