--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeepSeek Chat + Kling AI by Kojihov</title>
-    <script src="https://cdn.jsdelivr.net/npm/jwt-encode@1.0.0/dist/jwt-encode.min.js"></script>
-    <script src="/script.js"></script>
     <link rel="icon" href="/ico.jpg" type="image/jpg">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css">
-
-    <script src="https://cdn.jsdelivr.net/npm/jwt-encode@1.0.0/dist/jwt-encode.min.js"></script>
-
 </head>
 <body>
     <div class="container">
@@ -59,6 +54,7 @@
         </footer>
     </div>
     
+    <!-- Правильный порядок подключения скриптов -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jwt-encode@1.0.0/dist/jwt-encode.min.js"></script>
     <script src="/script.js"></script>
