--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 <input type="password" id="api-key" placeholder="DeepSeek API Key">
                 <input type="password" id="kling-access-key" placeholder="Kling Access Key">
                 <input type="password" id="kling-secret-key" placeholder="Kling Secret Key">
-                <button id="save-keys" style="white-space: nowrap;">Сохранить ключи</button>
+                <button id="save-keys">Сохранить ключи</button>
+                <button id="check-keys">Проверить ключи</button>
             </div>
         </header>
 
